--- a/frontend/website/src/app/faq/faq.component.html
+++ b/frontend/website/src/app/faq/faq.component.html
@@ -1,1 +1,33 @@
-<p>faq works!</p>
+<h3>
+  1) Who are We?
+</h3>
+<p>
+  We are a startup corporation that provides personal surveillance systems.
+</p>
+<br>
+
+<h3>
+  2) How much are our services?
+</h3>
+<p>
+  We have multiple service options starting at $9.99/Month/Camera. With each additional camera, there is a 5% discount (Max 20%).
+</p>
+<br>
+
+<h3>
+  3) Do we ever offer promotions?
+</h3>
+<p>
+  We never offer promotions in order to prevent new customer from thinking they will lose out if they do not wait. Our prices are fixed.
+</p>
+<br>
+
+<h3>
+  4) Where are our servers located?
+</h3>
+<p>
+  Our servers are located in Illinois, USA.
+</p>
+<br>
+
+
