--- a/frontend/website/src/app/home/home.component.html
+++ b/frontend/website/src/app/home/home.component.html
@@ -2,14 +2,14 @@
 <br><br>
 
 <div class="row form-row align-items-end mb-2">
-      <img src="https://5.imimg.com/data5/BW/XH/MY-22186516/cctv-camera-installation-500x500.jpg" width="300"
-           height="300" alt="..." class="img-cover">
-      <img src="https://www.get-licensed.co.uk/get-daily/wp-content/uploads/2016/02/Untitled-design-12.png"
-           width="300" height="300" alt="..." class="img-cover">
-      <img src="https://surreyfire.co.uk/wp-content/uploads/2018/02/CCTV-legislation-UK.jpg" width="300"
-           height="300" alt="..." class="img-cover">
-      <img src="https://www.briefcam.com/wp-content/uploads/2018/09/security-officerx700.jpg" width="300"
-           height="300" alt="..." class="img-cover">
+  <img src="https://5.imimg.com/data5/BW/XH/MY-22186516/cctv-camera-installation-500x500.jpg" width="300"
+       height="300" alt="..." class="img-cover">
+  <img src="https://www.get-licensed.co.uk/get-daily/wp-content/uploads/2016/02/Untitled-design-12.png"
+       width="300" height="300" alt="..." class="img-cover">
+  <img src="https://www.briefcam.com/wp-content/uploads/2018/09/security-officerx700.jpg" width="300"
+       height="300" alt="..." class="img-cover">
+  <img src="https://surreyfire.co.uk/wp-content/uploads/2018/02/CCTV-legislation-UK.jpg" width="300"
+       height="300" alt="..." class="img-cover">
 </div>
 
 <br><br><br><br>
@@ -27,20 +27,31 @@
 </p>
 
 <br><br>
-<hr><hr>
+<hr>
+<hr>
 <br><br>
 
 <ul class="list-inline mt-3 mb-0">
-  <a>  <mat-icon>location_on</mat-icon> 1234 Garage Rd, Basement City, IL 56789</a>
+  <a>
+    <mat-icon>location_on</mat-icon>
+    1234 Garage Rd, Basement City, IL 56789</a>
   <br>
 
-  <a> <mat-icon>language</mat-icon> https://www.big-bro.com</a>
+  <a>
+    <mat-icon>language</mat-icon>
+    https://www.big-bro.com</a>
   <br>
 
-  <a> <mat-icon>email</mat-icon> big-bro@yahoo.com</a>
+  <a>
+    <mat-icon>email</mat-icon>
+    big-bro@yahoo.com</a>
   <br>
 
-  <a> <mat-icon>smartphone</mat-icon>(800) big-broo</a>
+  <a>
+    <mat-icon>smartphone</mat-icon>
+    (800) big-broo</a>
   <br>
 </ul>
+
+<br><br>
 
