--- a/frontend/website/src/app/home/home.component.scss
+++ b/frontend/website/src/app/home/home.component.scss
@@ -1,3 +1,21 @@
+h1 {
+  text-align: left;
+  padding-left:30px;
+}
+h3 {
+  text-align: left;
+  padding-left:30px;
+}
+p {
+  text-align: left;
+  padding-left:30px;
+}
+
+div {
+  text-align: left;
+  padding-left:30px;
+}
+
 body{
   background:#eee;
   margin-top:20px;
@@ -17,5 +35,7 @@ body{
 img {
   vertical-align: middle;
   border-style: none;
+  padding-left:15px;
 }
+
 
