--- a/frontend/website/src/app/navigation-bar/navigation-bar.component.html
+++ b/frontend/website/src/app/navigation-bar/navigation-bar.component.html
@@ -1,6 +1,8 @@
 <mat-toolbar color="primary" class="mat-elevation-z8">
+  <mat-icon>photo_camera</mat-icon>
   <span>
-    <mat-icon>photo_camera</mat-icon>Big Brother</span>
+    Big Brother
+  </span>
   <div class="spacer"></div>
   <a mat-button routerLink="home">Home</a>
   <a mat-button routerLink="faq">FAQ</a>
