Small update to FAQ
Added 11 more questions to the FAQ.
Added a form to ask questions.

--- a/frontend/website/src/app/faq/faq.component.html
+++ b/frontend/website/src/app/faq/faq.component.html
@@ -1,3 +1,4 @@
+<br><br>
 <h3>
   1) Who are We?
 </h3>
@@ -30,4 +31,103 @@
 </p>
 <br>
 
+<h3>
+  5) What is love?
+</h3>
+<p>
+  Baby don't hurt me, don't hurt me.
+</p>
+<br>
 
+<h3>
+  6) How many cameras can I use with your service?
+</h3>
+<p>
+  Our current limit is 10 cameras per account.
+</p>
+<br>
+
+<h3>
+  7) How do I create an account?
+</h3>
+<p>
+  You can create an account by clicking on the Sign-Up button on the top right.
+</p>
+<br>
+
+<h3>
+  8) Can I change the quality of picture/video?
+</h3>
+<p>
+  Yes you can. We offer 360 px, 480 px, 720 px, and 1080 px.
+</p>
+<br>
+
+<h3>
+  9) What is the maximum length of video I can record?
+</h3>
+<p>
+  You can record upto 30 seconds of video.
+</p>
+<br>
+
+<h3>
+  10) Can your service detect motion?
+</h3>
+<p>
+  Yes, we can detect motion upto a distance of 10 meters from the camera.
+</p>
+<br>
+
+<h3>
+  11) What guarantees do you offer?
+</h3>
+<p>
+  If you are not satisfied with our service, you can get a full refund within the first 30 days.
+</p>
+<br>
+
+<h3>
+  12) What does the fox say?
+</h3>
+<p>
+  Ring-ding-ding-ding-dingeringeding!</p>
+<br>
+
+<h3>
+  13) Can we schedule recording?
+</h3>
+<p>
+  We are still working on that feature. We will update you soon!</p>
+<br>
+
+<h3>
+  14) Will there be a mobile app?
+</h3>
+<p>
+  We are seriously considering this, but it is on the back-burner for now!</p>
+<br>
+
+<h3>
+  15) How long do you store the images and videos for?
+</h3>
+<p>
+  Images are stored for 30 days and video are stored for 24 hours.</p>
+<br>
+
+
+
+<br><br><br><br><br>
+<h2>Do you have any questions or comments?</h2>
+
+<form action="mailto:big-bro@yahoo.com" method="post" enctype="text/plain">
+  Name:<br>
+  <input type="text" name="name"><br>
+  E-mail:<br>
+  <input type="text" name="mail"><br>
+  Question:<br>
+  <input type="text" name="comment" size="50"><br><br>
+  <input type="submit" class="button" value="Send">
+  <input type="reset" class="button" value="Reset">
+</form>
+<br><br><br><br><br>
