--- a/frontend/website/src/app/faq/faq.component.scss
+++ b/frontend/website/src/app/faq/faq.component.scss
@@ -6,3 +6,21 @@ p {
   text-align: left;
   padding-left:30px;
 }
+h2 {
+  text-align: center;
+  padding-left:30px;
+}
+
+form {
+  text-align: Center;
+  padding-right:30px;
+
+}
+
+.button {
+  background-color: royalblue;
+  color: white;
+  padding: 10px 30px;
+  text-align: center;
+  font-size: 16px;
+}
