--- a/frontend/website/src/app/navigation-bar/navigation-bar.component.html
+++ b/frontend/website/src/app/navigation-bar/navigation-bar.component.html
@@ -5,6 +5,7 @@
   </span>
   <div class="spacer"></div>
   <a mat-button routerLink="home">Home</a>
+  <a mat-button routerLink="camera">Camera</a>
   <a mat-button routerLink="faq">FAQ</a>
   <a mat-button routerLink="about-us">About Us</a>
 </mat-toolbar>
