Can view flask stream from angular
To run this, open terminal/cmd prompt
From SecuritySystem cd into flask
run: python3 stream.py
(dependencies OpenCV, Flask)
Then run angular as normal, and view stream from camera page

--- a/frontend/website/src/app/components/camera/camera.component.html
+++ b/frontend/website/src/app/components/camera/camera.component.html
@@ -1,4 +1,8 @@
 <br><br>
 <p>
-  <video id="video" autoplay></video>
+<!--  <video id="video" autoplay></video>-->
+  <img style="height:300px;" src="http://127.0.0.1:5000/video_feed" alt="Cannot connect to camera feed server! It is possible your internet is not working, or our servers are currently down. Big Brother Inc apologizes for the inconvenience."/>
+  <br/>
+  <button>Take Snapshot</button>
+  <button>Record</button>
 </p>
