--- a/frontend/website/src/app/components/faq/faq.component.scss
+++ b/frontend/website/src/app/components/faq/faq.component.scss
@@ -18,9 +18,21 @@ form {
 }
 
 .button {
-  background-color: royalblue;
-  color: white;
-  padding: 10px 30px;
-  text-align: center;
-  font-size: 16px;
+  width:150px;
+  margin-top:2%;
+  margin-bottom:5%;
+  margin-left:5%;
+  margin-right:5%;
+  background-color: #1877F2;
+  color:white;
+  font-family: "Helvetica", sans-serif;
+  font-size:20px;
+  font-weight:bold;
+  border: none;
+  border-radius:5px;
+  height:50px;
+}
+
+.longInput {
+  align: Center;
 }
