--- a/frontend/website/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/frontend/website/src/app/components/navigation-bar/navigation-bar.component.html
@@ -6,6 +6,8 @@
   <div class="spacer"></div>
   <a mat-button routerLink="home">Home</a>
   <a mat-button routerLink="camera">Camera</a>
+  <a mat-button routerLink="login">Login</a>
+  <a mat-button routerLink="register">Register</a>
   <a mat-button routerLink="faq">FAQ</a>
   <a mat-button routerLink="about-us">About Us</a>
 </mat-toolbar>
