error messages up in this bitch

--- a/frontend/website/src/app/components/home/home.component.html
+++ b/frontend/website/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 <br><br>
 <h1>Welcome to Big Brother <span>{{this.authService.loggedInUser.firstname}}</span>! Where your security is our priority!</h1>
 <br><br>
-<div class="row form-row align-items-end mb-2">
+<div class="form-row align-items-end mb-2">
   <img src="https://5.imimg.com/data5/BW/XH/MY-22186516/cctv-camera-installation-500x500.jpg" width="300"
        height="300" alt="..." class="img-cover">
   <img src="https://www.get-licensed.co.uk/get-daily/wp-content/uploads/2016/02/Untitled-design-12.png"
