--- a/frontend/website/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/frontend/website/src/app/components/navigation-bar/navigation-bar.component.html
@@ -8,4 +8,5 @@
   <a mat-button routerLink="camera">Camera</a>
   <a mat-button routerLink="faq">FAQ</a>
   <a mat-button routerLink="about-us">About Us</a>
+  <a mat-button routerLink="auth"><mat-icon>login</mat-icon></a>
 </mat-toolbar>
