--- a/frontend/website/src/app/components/camera/camera.component.html
+++ b/frontend/website/src/app/components/camera/camera.component.html
@@ -4,6 +4,6 @@
   <img style="height:300px;" src="http://127.0.0.1:5000/video_feed" alt="Cannot connect to camera feed server! It is possible your internet is not working, or our servers are currently down. Big Brother Inc apologizes for the inconvenience."/>
   <br/>
   <button (click)="saveImage()">Take Snapshot</button>
-  <button (click)="saveImageToCloud">Take Snapshot & Save to Cloud</button>
+  <button (click)="saveImageToCloud()">Take Snapshot & Save to Cloud</button>
   <button>Record</button>
 </p>
