--- a/frontend/website/src/app/components/records/records.component.html
+++ b/frontend/website/src/app/components/records/records.component.html
@@ -1,1 +1,13 @@
-<p>records works!</p>
+<h2>Your recorded videos and images</h2>
+<table>
+  <tbody>
+  <tr>
+  <tr *ngFor="let mxdto of listOfMediax">
+    <td>
+      <p>{{mxdto.filename}}</p>
+      <img src="{{mxdto.url}}" height="200px;"/>
+    </td>
+
+  </tr>
+  </tbody>
+</table>
