--- a/frontend/website/src/app/components/change-password/change-password.component.html
+++ b/frontend/website/src/app/components/change-password/change-password.component.html
@@ -2,10 +2,10 @@
         <p><b>Username: </b>{{this.authServ.loggedInUser.username}}</p>
         <p><b>email: </b>{{this.authServ.loggedInUser.email}}</p>
         <p><b>Reset Token: </b>{{this.authServ.loggedInUser.resetToken}}</p>
-  <form  #userData="ngForm" (ngSubmit)="changePassword(userData)" novalidate>
+  <form #userData="ngForm" (ngSubmit)="changePassword(userData)" novalidate>
     <div class="form-group">
-      <input class="form-control login-input" name="password" id="password" ngModel=""><br>
+      <input (click)="clearPasswordPlaceholder()" class="form-control login-input" name="password" value="password" id="password" ngModel="{{passwordPlaceholder}}"><br>
     </div>
-    <button class="login-btn">Reset your password</button>
+    <button class="login-btn">Reset Password!</button>
   </form>
 </div>
