--- a/frontend/website/src/app/components/login/login.component.scss
+++ b/frontend/website/src/app/components/login/login.component.scss
@@ -1,5 +1,8 @@
 .login-input {
   margin-top:2%;
+  margin-left: 25%;
+  margin-right: 25%;
+  width: 50%
 }
 
 .error-msg {
@@ -9,7 +12,7 @@
 }
 
 .login-btn {
-  width:100%;
+  width:50%;
   margin-bottom:10%;
   background-color: #1877F2;
   color:white;
@@ -19,10 +22,13 @@
   border: none;
   border-radius:5px;
   height:50px;
+  text-align: center;
+  margin-left: 25%;
+  margin-right: 25%;
 }
 
 .register-btn {
-  width:80%;
+  width:30%;
   background-color: #42B72A;
   color:white;
   font-family: "Helvetica", sans-serif;
@@ -31,12 +37,15 @@
   border: none;
   border-radius:5px;
   height:50px;
+  text-align: center;
+  margin-right: 35%;
+  margin-left: 35%;
 }
 
 //700px
 @media (min-width: 43.75em) {
   .login-btn {
-      width:100%;
+      width:50%;
       margin-bottom:12%;
       margin-top:2%;
       background-color: #1877F2;
@@ -47,6 +56,10 @@
       border: none;
       border-radius:5px;
       height:50px;
+      text-align: center;
+      margin-left: 25%;
+      margin-right: 25%;
+
   }
 }
 
@@ -54,10 +67,13 @@
 @media (min-width: 62em) {
   .login-input {
       margin-top:5%;
+    margin-left: 25%;
+    margin-right: 25%;
+    width: 50%
   }
 
   .login-btn {
-      width:100%;
+      width:50%;
       margin-bottom:10%;
       margin-top:10%;
       background-color: #1877F2;
@@ -68,18 +84,25 @@
       border: none;
       border-radius:5px;
       height:50px;
+      text-align: center;
+      margin-left: 25%;
+      margin-right: 25%;
+
   }
-  
+
 }
 
   /* 1392px */
   @media (min-width: 87em) {
       .login-input {
           margin-top:5%;
+        margin-left: 25%;
+        margin-right: 25%;
+        width: 50%
       }
-  
+
       .login-btn {
-          width:100%;
+          width:50%;
           margin-top:5%;
           background-color: #1877F2;
           color:white;
@@ -89,11 +112,14 @@
           border: none;
           border-radius:5px;
           height:50px;
-      } 
+          text-align: center;
+          margin-left: 25%;
+          margin-right: 25%;
+      }
 
-      
+
       .register-btn {
-          width:80%;
+          width:30%;
           background-color: #42B72A;
           color:white;
           font-family: "Helvetica", sans-serif;
@@ -102,7 +128,10 @@
           border: none;
           border-radius:5px;
           height:50px;
+          text-align: center;
           margin-top:2%;
+          margin-right: 35%;
+          margin-left: 35%;
       }
     }
 
