--- a/frontend/website/src/app/components/password-reset/password-reset.component.html
+++ b/frontend/website/src/app/components/password-reset/password-reset.component.html
@@ -1,11 +1,8 @@
 <div class="container-fliud login-cont">
   <form  #userData="ngForm" (ngSubmit)="reset(userData)" novalidate>
     <div class="form-group">
-      <input class="form-control login-input" name="username" id="username" ngModel=""><br>
+      <input class="form-control login-input" name="email" id="email" ngModel=""><br>
     </div>
-    <div class="form-group">
-      <input class="form-control login-input"  name="id" id="id" ngModel=""><br>
-    </div>
-    <button class="login-btn">Reset your password</button>
+    <button class="login-btn">Send Reset Token!</button>
   </form>
 </div>
