--- a/frontend/website/src/app/components/home/home.component.html
+++ b/frontend/website/src/app/components/home/home.component.html
@@ -2,13 +2,13 @@
 <h1>Welcome to Big Brother <span>{{this.authService.loggedInUser.firstname}}</span>! Where your security is our priority!</h1>
 <br><br>
 <div class="form-row align-items-end mb-2">
-  <img src="https://5.imimg.com/data5/BW/XH/MY-22186516/cctv-camera-installation-500x500.jpg" width="300"
+  <img src={{imageList[0].url}} width="300"
        height="300" alt="..." class="img-cover">
-  <img src="https://www.get-licensed.co.uk/get-daily/wp-content/uploads/2016/02/Untitled-design-12.png"
+  <img src={{imageList[1].url}}
        width="300" height="300" alt="..." class="img-cover">
-  <img src="https://www.briefcam.com/wp-content/uploads/2018/09/security-officerx700.jpg" width="300"
+  <img src={{imageList[2].url}} width="300"
        height="300" alt="..." class="img-cover">
-  <img src="https://surreyfire.co.uk/wp-content/uploads/2018/02/CCTV-legislation-UK.jpg" width="300"
+  <img src={{imageList[3].url}} width="300"
        height="300" alt="..." class="img-cover">
 </div>
 
