BBI-62, Manually delete content from records page

--- a/frontend/website/src/app/components/records/records.component.html
+++ b/frontend/website/src/app/components/records/records.component.html
@@ -6,6 +6,7 @@
     <td>
       <p>{{mxdto.filename}}</p>
       <img src="{{mxdto.url}}" height="200px;"/>
+      <button (click)="deleteMediax(mxdto)">Delete</button>
     </td>
 
   </tr>
