--- a/frontend/website/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/frontend/website/src/app/components/navigation-bar/navigation-bar.component.html
@@ -6,6 +6,7 @@
   <div class="spacer"></div>
   <a mat-button routerLink="home">Home</a>
   <a mat-button routerLink="camera">Camera</a>
+  <a mat-button routerLink="preferences">Preferences</a>
   <a mat-button routerLink="faq">FAQ</a>
   <a mat-button routerLink="about-us">About Us</a>
   <a mat-button routerLink="auth"><mat-icon>login</mat-icon></a>
