--- a/frontend/website/src/app/components/camera/camera.component.html
+++ b/frontend/website/src/app/components/camera/camera.component.html
@@ -5,5 +5,5 @@
   <br/>
   <button (click)="saveImage()">Take Snapshot</button>
   <button (click)="saveImageToCloud()">Take Snapshot & Save to Cloud</button>
-  <button>Record</button>
+  <button (click)="record()">Record</button>
 </p>
