Dark Mode Implemented

--- a/frontend/website/src/app/components/home/home.component.html
+++ b/frontend/website/src/app/components/home/home.component.html
@@ -1,5 +1,6 @@
 <br><br>
-<h1>Welcome to Big Brother <span>{{this.authService.loggedInUser.firstname}}</span>! Where your security is our priority!</h1>
+<h1>Welcome to Big Brother <span>{{this.authService.loggedInUser.firstname}}</span>! Where your security is our
+  priority!</h1>
 <br><br>
 <div class="form-row align-items-end mb-2">
   <img src={{imageList[0].url}} width="300"
@@ -14,15 +15,15 @@
 
 <br><br><br><br>
 
-<h3 class="text-dark">Our Mission</h3>
+<h3>Our Mission</h3>
 
-<p class="text-muted f-14 mb-3">
+<p>
   Our mission here is to bring you the latest in personal surveillance systems.
 </p>
-<p class="text-muted f-14 mb-3">
+<p>
   Our corporation is affiliated with over 100 personal security related companies and firms.
 </p>
-<p class="text-muted f-14 mb-3">
+<p>
   Our staff is dedicated to preserving your right to life, liberty, and pursuit of happiness!
 </p>
 
