--- a/frontend/website/src/app/app.component.html
+++ b/frontend/website/src/app/app.component.html
@@ -1,3 +1,7 @@
-<app-navigation-bar></app-navigation-bar>
+<div id="theme-container" [ngClass]="[setDark ? 'darkTheme' : '']">
 
-<router-outlet></router-outlet>
+  <app-navigation-bar (dark)="darkMode($event)"></app-navigation-bar>
+
+  <router-outlet></router-outlet>
+
+</div>
