--- a/frontend/website/src/app/components/navigation-bar/navigation-bar.component.scss
+++ b/frontend/website/src/app/components/navigation-bar/navigation-bar.component.scss
@@ -1,5 +1,18 @@
-@import '~@angular/material/prebuilt-themes/indigo-pink.css';
-
 .spacer {
   flex: 1 1 auto;
+}
+
+button {
+  margin-left: 100px;
+  width:150px;
+  height:50px;
+  background-color: #1877F2;
+  color:white;
+  font-family: "Helvetica", sans-serif;
+  font-size:20px;
+  font-weight:bold;
+}
+
+.mat-button {
+  color:white;
 }
