--- a/frontend/website/src/app/components/preferences/preferences.component.html
+++ b/frontend/website/src/app/components/preferences/preferences.component.html
@@ -47,7 +47,8 @@
   </label>
   <br>
 </p>
-
+<h3>Toggle motion recording</h3>
+<button (click)="toggleMotion()">{{text}}</button>
 <br>
 <form (ngSubmit)="editPreferences()" novalidate class="form">
   <button class="button">Submit</button>
