--- a/frontend/website/src/app/components/preferences/preferences.component.html
+++ b/frontend/website/src/app/components/preferences/preferences.component.html
@@ -3,7 +3,7 @@
 <div>
   <h3> How often would you like your media to be deleted?</h3>
   <h3> Every: </h3>
-  <select [(ngModel)]="deletePeriod">
+  <select [(ngModel)]="removePeriod">
     <option value="1">1 Minute</option>
     <option value="5">5 Minutes</option>
     <option value="15">15 Minutes</option>
