--- a/frontend/website/src/app/components/records/records.component.html
+++ b/frontend/website/src/app/components/records/records.component.html
@@ -34,7 +34,7 @@
       <td>
         <!-- <img id="img{{i}}" src="{{mxdto.url}}" height="200px;" style="visibility: hidden"/>
         <button id="sh{{i}}" (click)="showhide(mxdto,i)">Show</button> -->
-        <button class="btn btn-outline-primary" (click)="open(content,mxdto)">Show</button>
+        <button *ngIf="!mxdto.isvideo" class="btn btn-outline-primary" (click)="open(imagemodal, videomodal, mxdto)">Show</button>
       </td>
       <td>
         <a class="btn btn-outline-primary" href="{{mxdto.url}}" target="_blank" rel="noopener noreferrer" download="{{mxdto.url}}">Download</a>
@@ -48,16 +48,26 @@
   </tbody>
 </table>
 
-
-
-
-<ng-template #content let-modal>
+<ng-template #imagemodal let-modal>
   <div class="modal-header">
     <h4 class="modal-title" id="modal-basic-title">{{currentmx.filename}}</h4>
     <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
   </div>
   <div class="modal-body">
     <img width="100%;" [src]="currentmx.url"/>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Alright</button>
+  </div>
+</ng-template>
+
+<ng-template #videomodal let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">{{currentmx.filename}}</h4>
+    <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
+  </div>
+  <div class="modal-body">
+    <embed [src]="safeUrl">
   </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Alright</button>
